[project]
name = "bofa"
version = "0.0.2"
description = "Have you heard of bofa?"
readme = "README.md"
authors = [
    { name = "jonathan343", email = "jonathangee09@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bofa = "bofa:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.11.0"]
build-backend = "uv_build"
